--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ boto3-stubs-lite = "^1.26.8"
 uuid6 = "^2022.10.25"
 pika = "^1.3.1"
 imagehash = "^4.3.1"
+flask-jwt-extended = "^4.4.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.5"
