--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ uuid6 = "^2022.10.25"
 pika = "^1.3.1"
 imagehash = "^4.3.1"
 flask-jwt-extended = "^4.4.4"
+pydantic = "^1.10.7"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.5"
