fix(jwt): #85zrwhzpb: add check оце шт .env and add JWT_TOKEN_KEY to .env.example

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 S3_PREFIX=
 S3_USE_SSL=
+S3_EXTERNAL=
 
 #S3 minio for debug
 MINIO_ROOT_USER=
@@ -26,3 +27,5 @@ RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 
 RABBITMQ_PHOTO_FOR_MODELS_EXCHANGE_NAME=
+
+JWT_SECRET_KEY=
