--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - develop
-      - feature/#85zrxa6fq-change-auth-default-creds
-  pull_request:
 
 jobs:
   build-image:
@@ -63,6 +61,7 @@ jobs:
             --set "extraSecretEnvVars.MINIO_ROOT_PASSWORD=${{ secrets.DEV_MINIO_ROOT_PASSWORD }}" \
             --set "extraSecretEnvVars.AUTH_USERNAME=${{ secrets.DEV_AUTH_USERNAME }}" \
             --set "extraSecretEnvVars.AUTH_PASSWORD=${{ secrets.DEV_AUTH_PASSWORD }}" \
+            --set "extraSecretEnvVars.JWT_SECRET_KEY=${{ secrets.DEV_JWT_SECRET_KEY }}" \
             "${RELEASE_NAME}" \
             bitnami/nginx
           kubeconfig: "${{ secrets.DEV_KUBECONFIG }}"
