--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ imagehash = "^4.3.1"
 flask-jwt-extended = "^4.4.4"
 pydantic = "^1.10.7"
 pytest = "^7.3.1"
+jsonschema = "^4.17.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.15.5"
